--- a/biro2/hazi2/style.css
+++ b/biro2/hazi2/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 h2 {
-    color: orange;
+    color: rgb(248, 200, 111);
     margin: 10px;
 }
 
@@ -20,7 +20,7 @@ h2 {
 }
 
 .creature {
-    border: 2px solid orange;
+    border: 2px solid rgb(242, 208, 145);
     border-radius: 10px;
     /* width: 45%; */
     margin: 7px;
@@ -30,23 +30,30 @@ h2 {
 img {
     border: 1px solid orange;
     border-radius: 10px;
-    margin: 10px;
+    margin: 0 10px 10px 10px;
     float: left;
-    width: 250px;
+    height: 20vw;
+    /* height: 270px; */
+    transition: transform 150ms linear;
+}
+
+img:hover {
+    transform: scale(1.025);
 }
 
 .creature-data {
-    padding: 10px;
+    padding: 0 10px 10px 0;
 }
 
 .creature-description {
     color: white;
     text-align: justify;
+    font-size: 11.1pt;
 }
 
 .creature-abilities {
     display: inline-block;
-    width: 60%;
+    width: 50%;
 }
 
 .ability-title {
@@ -65,7 +72,7 @@ img {
 
 .ability-bar {
     /* display: inline-block; */
-    width: 75%;
+    width: 80%;
     height: 18px;
     padding: 1px;
     background-color: white;
@@ -75,6 +82,12 @@ img {
 
 .bar {
     border-radius: 50px;
+    height: 100%;
+    width: 100%;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+    /* animation: ability-fill 500ms linear 2ms 1; */
+    /* transition: width 500ms linear; */
+    /* transition: width 50ms ease-in-out; */
 }
 
 .bar--danger {
@@ -89,17 +102,46 @@ img {
     background-color: blueviolet;
 }
 
+@keyframes highbar-fill {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 85%;
+    }
+}
 
 .bar--high {
-    width: 80%;
+    width: 85%;
+    animation: highbar-fill 400ms ease-in 2ms 1;
+}
+
+@keyframes mediumbar-fill {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 50%;
+    }
 }
 
 .bar--medium {
     width: 50%;
+    animation: mediumbar-fill 400ms ease-in 2ms 1;
+}
+
+@keyframes lowbar-fill {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 25%;
+    }
 }
 
 .bar--low {
     width: 25%;
+    animation: lowbar-fill 400ms ease-in 2ms 1;
 }
 
 
@@ -108,20 +150,80 @@ img {
 }
 
 .price {
-    color: white;
+    color: bisque;
     text-align: center;
+    font-size: 24pt;
+    font-weight: bold;
 }
 
 .price::before {
-    content: '$ ';
+    content: '$';
+    letter-spacing: 1ch;
 }
 
 .buy {
     padding: 10px 100px;
     text-transform: uppercase;
     color: black;
-    background-color: rgb(249, 186, 69);
+    background-color: rgb(246, 180, 59);
+    display: block;
     margin: 0 auto;
+    cursor: pointer;
+    transition: all 200ms ease;
+    border: none;
+}
+
+.buy:hover {
+    /* background-color: rgb(249, 175, 38); */
+    box-shadow: 0px 3px 6px rgb(230, 179, 84);
+    transform: translateY(-3px);
+}
+
+.buy:active {
+    background-color: rgb(248, 187, 74);
+    box-shadow: none;
+    transition: none;
 }
 
 
+@media only screen and (max-width: 1068px) {
+    .container {
+        display: grid;
+        grid-template-columns: none;
+    }
+
+    .creature {
+        padding: 5px;
+    }
+
+    img {
+        height: 270px;
+    }
+
+}
+
+@media screen and (max-width: 652px) {
+
+    img {
+        display: block;
+        margin: 0 auto;
+        float: none;
+    }
+
+    .creature-abilities {
+        width: 100%;
+    }
+
+    .creature-description {
+        /* float: left; */
+        margin-left: 10px;
+    }
+
+    .ability-title {
+        text-indent: 9vw;
+    }
+
+    .ability-bar {
+        margin: 0 auto;
+    }
+}
